Address sonarcloud code smells (changes to Java 17 idioms, fix jakarta.ws.rs deprecations)